# RoboClaw

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DOCKERINSTALLATION.md  DOCKER_WORKFLOW.md  Dockerfile  GOVERNANCE.md  INSTALLATION.md  README.md  SUPPORT.md  docker-compose.yml  nanobot-bridge-architecture.md  pyproject.toml  run.py
docs/: INSTALLATION.md  architecture.md  chat-first-learning-workbench.md  development.md  docker-workflow.md  web-ui-quickstart.md
nanobot/nanobot-bridge/: .gitignore  README.md  pyproject.toml
nanobot/nanobot-bridge/bridge_core/: __init__.py  driver_loader.py  sandbox.py  task_manager.py
nanobot/nanobot-bridge/examples/drivers/: so100_real.py  so100_sim.py
nanobot/nanobot-bridge/robot_bridge/: __init__.py  server.py
nanobot/nanobot-bridge/sim_bridge/: __init__.py  physics.py  server.py
nanobot/nanobot-bridge/tests/: conftest.py
nanobot/nanobot-bridge/tests/test_core/: test_driver_loader.py  test_sandbox.py  test_task_manager.py
nanobot/nanobot-bridge/tests/test_robot/: test_benchmark.py  test_server_integration.py
nanobot/nanobot-bridge/tests/test_sim/: test_physics.py  test_server_integration.py
roboclaw-web/: README.md  index.html  package-lock.json  package.json  server.py
scripts/: prepare-native-calibration.sh  setup-udev.sh
scservo_sdk/: protocol_packet_handler.py
tests/: test_auto_calibration.py  test_base_channel.py  test_calibration.py  test_camera_grabber.py  test_cli_input.py  test_commands.py  test_config_paths.py  test_coordination_service.py  test_curation_annotation_api.py  test_docker.sh  (+44 more)
(+364 files in other folders)
