[project]
name = "nanobot-bridge"
version = "0.1.0"
description = "MCP bridge connecting nanobot to robots and simulations"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.26.0,<2.0.0",
]

[project.optional-dependencies]
sim = [
    "pybullet>=3.2.5",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
nanobot-robot-bridge = "robot_bridge.server:main"
nanobot-sim-bridge = "sim_bridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge_core", "robot_bridge", "sim_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
